# semantic-ubems

./: 404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: index.md  outline.md
outline/: index.html
search/: search_index.json
tests/: test_foo.py
